--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-593.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇭🇰 香港-1.46MB/s(Youtube:不良林), server: xmrh000.xmrth-node.xyz, port: 15880, type: vmess, uuid: ab3f9ddc-7c35-3793-98f0-1c37eb9741e1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh000.xmrth-node.xyz}}
-  - {name: 🇮🇳 印度-2.48MB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
-  - {name: 🇨🇳 中国-2.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.88MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇨🇳 中国-322.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇸🇬 新加坡-508.3KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.22MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.75MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-792.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-437.5KB/s(Youtube:不良林), server: 45.137.97.205, port: 443, type: trojan, password: 495d2078-9268-33ed-a33a-c16f56e27c95, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-593.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-593.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-593.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-593.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-593.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-593.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-593.3KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
       - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
