--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-5.88MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 🇨🇳 中国-322.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇸🇬 新加坡-508.3KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.22MB/s(Youtube:不良林), server: 51.38.118.42, port: 813, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-4.75MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-6.24MB/s(Youtube:不良林), server: 146.56.103.73, port: 14003, type: vmess, uuid: b294b95e-71cc-4cbb-cf4b-6b6ad8fb3d00, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-395.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇫🇷 法国-1.21MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -22,10 +22,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
@@ -37,10 +37,10 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
@@ -53,10 +53,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
@@ -73,10 +73,10 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
@@ -88,10 +88,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
@@ -104,10 +104,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
@@ -129,10 +129,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
