--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.88MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
   - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-6.24MB/s(Youtube:不良林), server: 146.56.103.73, port: 14003, type: vmess, uuid: b294b95e-71cc-4cbb-cf4b-6b6ad8fb3d00, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-395.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇫🇷 法国-1.21MB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.69MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.10MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-792.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-437.5KB/s(Youtube:不良林), server: 45.137.97.205, port: 443, type: trojan, password: 495d2078-9268-33ed-a33a-c16f56e27c95, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.94MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇫🇷 法国-767.9KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-4.99MB/s(Youtube:不良林), server: 97.64.122.63, port: 253, type: ss, cipher: aes-256-cfb, password: bwhskrskr05}
+  - {name: 🇬🇧 英国-598.5KB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇫🇷 法国-1.00MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: 43.154.155.125, port: 46409, type: vmess, uuid: 6bfe39c7-3608-4d2c-81ae-5b8d65ed5a93, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 43.154.155.125}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-767.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-598.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-767.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-598.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-767.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-598.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-767.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-598.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-767.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-598.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-767.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-598.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.88MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-6.24MB/s(Youtube:不良林)
-      - 🇨🇳 中国-395.7KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.10MB/s(Youtube:不良林)
-      - 🇨🇳 中国-792.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-437.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.94MB/s(Youtube:不良林)
+      - 🇫🇷 法国-767.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
+      - 🇬🇧 英国-598.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
